@@ -1,3 +1,7 @@
+== Next version
+
+* Wrapping an enumerable that is already wrapped is no longer allowed.
+
 == Version 0.8.1
 This release adds tuple constraints along with a couple of minor features. It 
 also fixes a bug introduced in the previous version.
